--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="quotation">
       Together we can rule the galaxy
     </div>
-    <h3>Notable achievements</h3>
+    <h3>Notable achievements?</h3>
   
   
   
